[package]
name = "clamav-sys"
description = "ClamAV low level bindings for Rust"
version = "0.0.2"
authors = ["Jonas Zaddach <jonas.zaddach@gmail.com>"]
edition = "2018"
license = "GPL-2.0"
categories = ["external-ffi-bindings"]
homepage = "https://github.com/zaddach/clamav-sys/"
repository = "https://github.com/zaddach/clamav-sys/"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.53.1"
vcpkg = "0.2.10"
